--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "sean-ockert",
+  "name": "blogpost-template",
   "version": "1.0.1",
-  "description": "My homepage",
+  "description": "A template layout for single blog posts. Includes best practices for font and image loading plus handy plugins - https://so-blogpost-template.surge.sh",
   "main": "index.html",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/seanockert/blogpost-template"
   },
   "bugs": {
     "url": ""
@@ -17,19 +17,15 @@
   "author": "Sean Ockert",
   "homepage": "https://seanockert.com",
   "devDependencies": {
-    "critical": "^0.7.0",
-    "gulp": "^3.9.1",
-    "gulp-compass": "^2.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rev-append": "^0.1.6",
-    "gulp-sass": "^2.1.1",
-    "gulp-uglify": "^1.5.1",
-    "gulp-uglifycss": "^1.0.5",
-    "gulp-uncss": "^1.0.4",
-    "jshint": "^2.8.0"
+    "critical": "^1.3.4",
+    "gulp-concat": "^2.6.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-rev-append": "^0.1.8",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.1",
+    "gulp-uglifycss": "^1.1.0"
   },
   "dependencies": {}
 }
